force-app/main/default/objects/redwing__Learning_Category__c/redwing__Learning_Category__c.object-meta.xml
<CustomObject>
    <label>Learning Catalog</label>
    <nameField>
        <label>Learning Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Catalogs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>