force-app/main/default/objects/redwing__Learning_Category__c/fields/redwing__Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Background_Image_URL__c</fullName>
    <inlineHelpText>URL for the image displayed in the catalog detail header</inlineHelpText>
    <label>Background Image URL</label>
    <type>Url</type>
</CustomField>