force-app/main/default/objects/redwing__Learning_Category__c/fields/redwing__Hide_From_Catalog_Home__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_From_Catalog_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you do not want to display this catalog in the catalog home page</inlineHelpText>
    <label>Hide from Catalog Home</label>
    <type>Checkbox</type>
</CustomField>