force-app/main/default/objects/redwing__Learning_Category__c/fields/redwing__Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>redwing__Is_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you do not want to display this catalog to external users</inlineHelpText>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>