force-app/main/default/objects/redwing__Learning_Category__c/fields/redwing__Language__c.field-meta.xml
<CustomField>
    <fullName>redwing__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>redwing__Languages</valueSetName>
    </valueSet>
</CustomField>