force-app/main/default/objects/redwing__Learning_Category__c/fields/redwing__Limit_Internal_Visibility__c.field-meta.xml
<CustomField>
    <fullName>redwing__Limit_Internal_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to limit visibility in Catalog Homepage to specific Profiles/Groups defined in the Catalog</inlineHelpText>
    <label>Limit Internal Visibility (Obsolete)</label>
    <type>Checkbox</type>
</CustomField>