force-app/main/default/objects/redwing__Learning_Category__c/fields/redwing__Logo__c.field-meta.xml
<CustomField>
    <fullName>redwing__Logo__c</fullName>
    <inlineHelpText>URL for the image displayed for this catalog in the catalog page</inlineHelpText>
    <label>Logo</label>
    <type>Url</type>
</CustomField>