force-app/main/default/objects/redwing__Learning_Category__c/fields/redwing__Order__c.field-meta.xml
<CustomField>
    <fullName>redwing__Order__c</fullName>
    <inlineHelpText>Number that defines the position in which this catalog will appear in the catalog page</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>