force-app/main/default/objects/redwing__Learning_Category__c/fields/redwing__Top_Level_Catalog__c.field-meta.xml
<CustomField>
    <fullName>redwing__Top_Level_Catalog__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If unchecked, the catalog will not be visible on the Learning Catalogs page; it will only be visible within parent catalogs.</inlineHelpText>
    <label>Top-Level Catalog</label>
    <type>Checkbox</type>
</CustomField>