force-app/main/default/objects/redwing__Learning_Category__c/fields/redwing__Total_Training_Plans__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_Training_Plans__c</fullName>
    <label>Total Learning Plans</label>
    <summaryForeignKey>redwing__Training_Plan_Category__c.redwing__Learning_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>